style-delia.css
/* ... */
  
  .nav-item {
    padding: 0 !important;
  }

  .outline::before {
    padding: 5px;
    border-radius: 12px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .outline {
    width: 40px;
    height: 40px;
    position: relative;
    transform: scale(0.8);
  }

  .nav-item:first-child, .nav-item:nth-child(1) {
    box-shadow: var(--nav-item-shadow);
  }

  .back-arrow {
    padding: 10px !important;
    width: 50px !important;
    height: 50px !important;
  }

  .nav-item:first-child img {
    padding: 13px !important;
    width: 50px;
    height: 50px;
  }
  
  .dark {
    color: var(--black1) !important;
  }
  
  .icon-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50px !important;
    height: 50px !important;
    border-radius: 100%;
    background-color: var(--white);
    padding: 0 !important;
  }
  
  .profile-pic-container img {
    object-fit: cover;
    object-position: 10% 20%;
    width: 50px !important;
    height: 50px !important;
    border-radius: 100%;
    border: 3px solid var(--white) !important;
  }

  .profile-pic-container {
    border-radius: 100%;
  }

  .profile-pic-container:active {
    border: 4px solid transparent !important;
  }

  #contact {
    background-color: var(--white);
    padding-top: 30px;
    overflow: hidden;
  }
  
  #contact > h3 {
    font-size: var(--txt-16) !important;
    margin-bottom: 10px;
    z-index: 4;
  }
  
  #social-container {
    display: flex;
    justify-content: center !important;
    align-items: center;
    width: 100%;
  }

  /* HERO SECTION */

  section {
    margin-bottom: var(--mb-50);
    padding: var(--paddingX-30);
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
  }

  section:last-child {
    margin-bottom: 0 !important;
  }
  
  #delia-hero-section {
    margin-top: 255px;
    color: var(--purple);
    margin-bottom: var(--mb-50);
    padding: var(--paddingX-30);
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
  }

  .hero-txt {
    font-size: var(--txt-24);
    -webkit-text-stroke: #fff 5px;
    paint-order: stroke fill;
  }

  #delia-proto-link, #delia-link {
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    color: var(--water-green);
    font-size: var(--txt-16) !important;
    font-weight: var(--medium) !important;
    background-color: var(--purple);
    border-radius: 15px !important;
    padding: 0 0 0 15px;
    cursor: pointer;
    margin: var(--mY-30);
    box-shadow: var(--box-shadow-light);
  }

  .card {
    background-color: var(--white) !important;
    margin: var(--mY-15);
    padding: var(--padding-card-txt);
    font-size: var(--txt-14) !important;
    width: 100%;
    border-radius: 20px !important;
    box-shadow: var(--box-shadow-light);
    border: transparent !important;
  }

  .card-title {
    display: flex;
    align-items: center !important;
    font-weight: bold;
    gap: 10px;
    font-size: var(--txt-14);
    margin: auto 20px !important;
    height: 40px;
    font-size: var(--txt-14) !important;
    text-transform: none !important;
  }

  .card-body {
    padding: 0 !important;
  }

  #objectifs {
    height: 575px;
    border-radius: 15px 15px 0 0 !important;
    margin-bottom: 0 !important;
    box-shadow: var(--box-shadow-light);
    position: relative !important;
    z-index: 2 !important;
  }

  #demarche {
    position: relative;
    border-radius: 15px 15px 0 0 !important;
    box-shadow: var(--box-shadow-light);
    margin-top: -30px !important;
    background-color: var(--white-casse);
    height: 100%;
    padding-top: 50px !important;
    padding-bottom: 50px !important;
    margin-bottom: 50px !important;
    z-index: 2 !important;
  }

  .mt-50 {
    margin-top: 50px !important;
  }

  #concept {
    position: relative;
    padding: 100px 30px 50px 30px !important;
    border-radius: 20px 20px 0 0 !important;
    background-color: var(--white);
    margin-bottom: 0 !important;
    box-shadow: var(--box-shadow-light);
    margin-top: -65px !important;
    z-index: 3 !important;
  }

  #ideate-section > div > article > .card,
  #concept > div > article > .card, 
  #demarche > div > article > .card {
    padding: var(--padding-card-img) !important;
    box-shadow: -5px 5px 0 var(--salmon);
  }

  #ideate-section > div > article > .card img,
  #concept > div > article > .card img, 
  #demarche > div > article > .card img {
    border-radius: 0 !important;
    margin: 1.5% !important;
    width: 300px;
    height: 300px;
  }

  #ideate-section > article > .card > .card-title,
  #concept > article > .card > .card-title,
  #demarche > article > .card > .card-title {
    justify-content: center;
    align-items: center;
    margin: 0;
  }

  #roles-list {
    list-style-type: "+ ";
    opacity: 0.5;
    margin-bottom: 0;
  }

  .demarche-img-container .card,
  .ideate-img-container .card {
    width: 100%;
    height: 100%;
    margin: 0 0 15px 0;
  }

  #demarches-list, #livrables-list {
    list-style-type: none;
    margin-bottom: 0;
  }

  li {
    margin: var(--mY-10) !important;
  }

  .inner-ul > li {
    list-style-type: initial;
  }

  h2 {
    text-transform: uppercase;
    width: 100%;
    font-weight: var(--extra-bold) !important;
    font-size: var(--txt-20);
    border-bottom: 1px solid;
    font-style: italic;
    text-shadow: 3px 2px 0px hsla(28, 100%, 55%, 0.25);
    margin-bottom: var(--mb-30) !important;
  }

  h3 {
    text-transform: uppercase !important;
    font-weight: 800 !important;
  }

  #results {
    background-color: var(--purple);
    padding: 100px 30px;
    border-radius: 15px 15px 0 0 !important;
    color: var(--white);
  }
/* ... */

